2008-10-17  Emilio Meschi  <emilio.meschia@cern.ch>

	* tag V00-04-03 (V00-04-02 tags removal of .cfg files)
	* moved most of constructor code to separate function "reconfigure"
	* to allow reconfig of PrescaleService at run boundaries


2008-05-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-01
	* use getProcessParameterSet() kindly provided by Marc P. in
	FWCore/ParameterSet/interface/Registry.h to validate that each
	path referenced int the prescale table has exactly one
	HLTPrescaler.

2008-04-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* reimplementation: the configuration of the service allows to
	specify a *vector* of prescales for each path in the configuration
	* This is necessary for dynamic prescale changes at run time
	initiated by the level1 trigger
	* Currently, a check is missing that (1) each provided path is
	actually in the configuration and (2) that each path in the
	configuration has at most one HLTPrescaler: HLTPrescaler modules
	are going to update their individual prescaleFactor at the
	beginning of each lumi block, by querying the PrescaleService,
	providing the current *pathname* as key!
	
